* Really remove main.py.
* Put conf and compare in their own module.
* Moved splitHostPort function into utilities.
* Added a scheuler to the TODO.
* Started populating scenarios.txt.
* Added more notes to the scheduler idea in TODO.
* Cleaned up docstrings in schedulers.py.
* Added missing text to scenarios.txt.
* Added an application module and moved most of the .tac file contents there.

2008.06.22 oubiwann

* Added a script for getting stress test stats using the siege tool.
* Added some initial stress test data.
* Updatd TODO with a tentative plan for a benchmark lab.
* Removed completed tasks from the TODO.
* Added support for a manager section and updated the corresponding docs.
* Removed useless chunk of code in manager.checkBadHosts.
* Added support for CDATA and <note> sections of the XML config file.
* Added documentation on the legal types of comments in the XML config file.
* Cleaned up the configuration class names.
* Named the configuration variables more consistently.
* Updated TODO.
* Removed the PyDirector string from the .tac file.
* Updated TODO.
* Updated the test plan.
* Updated configs and admin scripts for running additional tests.
* Fixed error in config.
* Updated siege runner admin script.
* Added stats for testing on a Netra 240.
* Added stats for testing with 4 web daemons on a Netra.
* Added more stats as well as images for select stats.
* Added the control protocol classes from Apple (Calendar Server) by David
Reid.
* Added the configuration options for the control/socket stuff from Apple
(Calendar Server) by David Reid.
* Updated the architecture diagram with the control/socket stuff.
* Added the Apple Calendar Server changes from David Reid to the Director.
* Updated the Listener and Directory with additional Apple Calendar Server
changes from David Reid.
* Added Sender fix from David Reid: "Make sure that when the server closes the
connection cleanly we close the connection with the client. This can cause