@@ -11,6 +11,31 @@ from txlb.admin import pages
 from txlb.manager import checkBadHosts
 
 
+def setupAdminServer(director):
+    """
+    Given the director, set up a potentially SSL-enabled admin web UI on the
+    configured port.
+    """
+    site = server.Site(pages.AdminServer(director))
+    adminPort = director.conf.admin.listen[1]
+    if director.conf.admin.secure:
+        util.setupServerCert()
+        context = ssl.DefaultOpenSSLContextFactory(
+            util.privKeyFile, util.certFile)
+        admin = internet.SSLServer(adminPort, site, context)
+    else:
+        admin = internet.TCPServer(adminPort, site)
+    return admin
+
+
+def setupHostChecker(director):
+    """
+    This is the setup for the "bad host check" management task.
+    """
+    checkInterval = director.conf.manager.hostCheckInterval
+    return internet.TimerService(checkInterval, checkBadHosts, director)
+
+
 def setup(configFile):
     """
     Given the configuration file, instantiate the proxy manager and setup the
@@ -19,23 +44,23 @@ def setup(configFile):
     application = service.Application(name)
     services = service.IServiceCollection(application)
 
-    # set up the director
+    # instantiate the proxy manager to direct the proxies
     director = manager.ProxyManager(configFile)
 
+    # set up proxies for each service the proxy manager balances
+    # XXX
+
+    # set up the control socket
+    # XXX
+
     # set up the web server
-    site = server.Site(pages.AdminServer(director))
-    adminPort = director.conf.admin.listen[1]
-    if director.conf.admin.secure:
-        util.setupServerCert()
-        context = ssl.DefaultOpenSSLContextFactory(util.privKeyFile, util.certFile)
-        admin = internet.SSLServer(adminPort, site, context)
-    else:
-        admin = internet.TCPServer(adminPort, site)
+    admin = setupAdminServer(director)
     admin.setServiceParent(services)
 
     # set up the manager timer service
-    checkInterval = director.conf.manager.hostCheckInterval
-    checker = internet.TimerService(checkInterval, checkBadHosts, director)
+    checker = setupHostChecker(director)
     checker.setServiceParent(services)
 
     return application
+
+
